k3s-arr/traefik/traefik-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-api
  namespace: traefik
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: api
