k3s-arr/traefik/dashboard-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-redirect
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.rahl.cc`) && Path(`/`)
      kind: Rule
      services:
        - name: noop
          kind: Service
      middlewares:
        - name: redirect-to-dashboard

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-dashboard
  namespace: traefik
spec:
  redirectRegex:
    regex: ^https?://traefik\.rahl\.cc/?$
    replacement: http://traefik.rahl.cc/dashboard/
    permanent: true
---
apiVersion: v1
kind: Service
metadata:
  name: noop
  namespace: traefik
spec:
  ports:
    - port: 80
      targetPort: 80
  clusterIP: None
